<resources>
    <string name="app_name">STAY FIT</string>
    <string name="Open">Stay Fit</string>
    <string name="Close">Stay Fit</string>
    <string name="txtLogin">STAY FIT!\nLOGIN NOW!</string>
    <string name="txtUserN">Username</string>
    <string name="txtPassW">Password</string>
    <string name="btnTxtSignup">SIGN UP</string>
    <string name="btnTxtLogin">LOGIN</string>
    <string name="txtTitleSP">LET\'S GO!!!</string>
    <string name="txtFName">Full Name</string>
    <string name="txtLName">Last Name</string>
    <string name="txtLNamee">Last Name</string>
    <string name="txtEmail">Email</string>
    <string name="txtWeight">Weight</string>
    <string name="txtAge">Age</string>
    <string name="bttSubmit">SUBMIT</string>
    <string name="hintUserN">username</string>
    <string name="hintPassWord">Password</string>
    <string name="hintConfirmPasword">Confirm Password</string>
    <string name="firstTitle">STAY FIT!\nSTAY HEALTHY!</string>
    <string name="textWOTitle">TRACK WORKOUT</string>
    <string name="hintWO">Exercise name</string>
    <string name="exTypeTxt">Exercise Type</string>
    <string name="radioCardioText">Cardio</string>
    <string name="radioBBtext">Body Building</string>
    <string name="textSets">Sets</string>
    <string name="textWeight">Weight</string>
    <string name="textDate">Date</string>
    <string name="btnTextAddEx">Add Exercise</string>
    <string name="textReps">Reps</string>
    <string name="hintWeight">in LBS</string>
    <string name="exTitle">Exercise</string>
    <string name="setTitle">Sets</string>
    <string name="repsTitle">Reps</string>
    <string name="deleteBtnText">X</string>
<!--    <string name="app_name">MyappStopwatch</string>-->
    <string name="btnshow">Show</string>
    <string name="btnstart1">Start</string>
    <string name="btnstop1">Stop</string>
    <string name="btnpause">Pause</string>
    <string name="btnreset">Reset</string>
    <string name="txtViewStartTime">Start Time</string>
    <string name="txtViewEndTime" />
    <string name="textReportTitle">REPORT\nOF\nWORKOUT ACTIVITIES\n</string>
</resources>
