<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    tools:context=".HomeActivities.WorkoutActivity">

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/textWOTitle"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/layoutOne"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitle">

        <EditText
            android:id="@+id/editTextExerciseName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/hintWO"
            android:inputType="textPersonName"
            android:textColor="#E8FFFFFF"
            android:textSize="24sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/textViewExType"
        android:layout_width="0dp"
        android:layout_height="29dp"
        android:text="@string/exTypeTxt"
        android:textColor="#3C3F41"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutOne" />

    <RadioGroup
        android:id="@+id/radioExTypes"
        android:layout_width="0dp"
        android:layout_height="29dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textViewExType"
        app:layout_constraintTop_toBottomOf="@+id/layoutOne">

        <RadioButton
            android:id="@+id/radioButtonBodyBuilding"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/radioBBtext" />

        <RadioButton
            android:id="@+id/radioButtonCardio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/radioCardioText" />

    </RadioGroup>

    <LinearLayout
        android:id="@+id/linearLayoutTwo"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewExType">

        <TextView
            android:id="@+id/textViewSets"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/textSets"
            android:textColor="#E9FFFFFF" />

        <EditText
            android:id="@+id/editTextSets"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:textColor="#E8FFFFFF" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutThree"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        app:layout_constraintStart_toEndOf="@+id/linearLayoutTwo"
        app:layout_constraintTop_toBottomOf="@+id/radioExTypes">

        <TextView
            android:id="@+id/textViewReps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/textReps"
            android:textColor="#E8FFFFFF" />

        <EditText
            android:id="@+id/editTextReps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:textColor="#E8FFFFFF" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutFour"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_weight="1"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/linearLayoutThree"
        app:layout_constraintTop_toBottomOf="@+id/radioExTypes">

        <TextView
            android:id="@+id/textViewWeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/textWeight"
            android:textColor="#E8FFFFFF" />

        <EditText
            android:id="@+id/editTextWeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/hintWeight"
            android:inputType="number"
            android:textColor="#E8FFFFFF" />

    </LinearLayout>

    <Button
        android:id="@+id/buttonAddExercise"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="148dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/btnTextAddEx"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutOne" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycleViewForWO"
        android:layout_width="398dp"
        android:layout_height="227dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonAddExercise"
        app:layout_constraintVertical_bias="1.0"></android.support.v7.widget.RecyclerView>

</android.support.constraint.ConstraintLayout>