<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/layoutGeneral"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/layoutExercise"
            android:layout_width="160dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewExTitle"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/exTitle" />

            <TextView
                android:id="@+id/textViewExercise"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:gravity="center" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutSets"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewSTitle"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/setTitle" />

            <TextView
                android:id="@+id/textViewSets"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:gravity="center" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutReps"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewRTitle"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/repsTitle" />

            <TextView
                android:id="@+id/textViewReps"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:gravity="center" />

        </LinearLayout>

    </LinearLayout>
</LinearLayout>
